fixed different random restart plot between markdown and bookdown

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -392,8 +392,9 @@ Unlike the classification and regression models we studied in previous chapters,
 For example, Figure \@ref(fig:10-toy-kmeans-bad-init) illustrates an unlucky random initialization by K-means.
 <center>
 ```{r 10-toy-kmeans-bad-init, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 4.35, fig.cap = "Random initialization of labels."}
-set.seed(11)
-penguin_data["label"] <- factor(sample(1:3, nrow(penguin_data), replace = T))
+penguin_data <- penguin_data |>
+  mutate(label = as_factor(c(3L, 3L, 1L, 1L, 2L, 1L, 2L, 1L, 1L, 
+                             1L, 3L, 1L, 2L, 2L, 2L, 3L, 3L, 3L)))
 
 plt_lbl <- ggplot(penguin_data, aes(y = bill_length_standardized, x = flipper_length_standardized, colour = label)) +
   geom_point(size = 2) +
