one more rowwise wording change

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -640,13 +640,14 @@ penguin_clust_ks
 
 Then we use `rowwise` \index{rowwise} + `mutate` to apply the `kmeans` function 
 within each row, to each K. 
-However, given that the `kmeans` returns a model object to us, (not a vector),
+However, given that the `kmeans` function 
+returns a model object to us, (not a vector),
 we will need to store the results as a list columm.
 This can work because lists are super vectors, and so they are legitimate 
 data structures for data frame columns. 
 To make this work, 
 we have to put each model object in a list using the `list` function.
-To do this we will write our map statement like this:
+We demonstrate how to do this below:
 
 ```{r}
 penguin_clust_ks <- tibble(k = 1:9) |>
