added section to address reviewer commment about the kind of data

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -38,8 +38,9 @@ and do this using R.
 limitations and assumptions of the K-means clustering algorithm.
 
 ## Clustering
-Clustering \index{clustering} is a data analysis task involving separating a data set into
-subgroups of related data. For example, we might use clustering to separate a
+Clustering \index{clustering} is a data analysis task 
+involving separating a data set into subgroups of related data. 
+For example, we might use clustering to separate a
 data set of documents into groups that correspond to topics, a data set of
 human genetic information into groups that correspond to ancestral
 subpopulations, or a data set of online customers into groups that correspond
@@ -73,6 +74,15 @@ choice for evaluation. In this book, we will use visualization to ascertain the
 quality of a clustering, and leave rigorous evaluation for more advanced
 courses.  
 
+As in the case of classification, 
+there are many possible methods that we could use to cluster our observations 
+to look for subgroups. 
+In this book, we will focus on the widely used K-means \index{K-means} algorithm.
+In your future studies, you might encounter hierarchical clustering,
+principle component analysis, multidimensional scaling, and more; 
+see the additional resources section at the end of the next chapter 
+for where to begin learning more about these other methods.
+
 > There are also so-called *semisupervised* tasks, \index{semisupervised} 
 > where only some of the data come with response variable labels/values, 
 > but the vast majority don't. 
@@ -83,9 +93,7 @@ courses.
 > but one is willing to provide a few informative example labels as a "seed" 
 > to guess the labels for all the data.
 
-
 **An illustrative example** 
-
 
 Here we will present an illustrative example using a data set \index{Palmer penguins} from the
 [{palmerpenguins} R data package](https://allisonhorst.github.io/palmerpenguins/). This data set was
@@ -385,6 +393,17 @@ in the fourth iteration; both the centers and labels will remain the same from t
 > (2) the total WSSD is always greater than or equal to 0, and (3) there are only a finite number of possible
 > ways to assign the data to clusters. So at some point, the total WSSD must stop decreasing, which means none of the assignments
 > are changing, and the algorithm terminates.
+
+What kind of data is suitable for K-means clustering? 
+In the simplest version of K-means clustering that we have presented here,
+the straight-line / Euclidean distance is used to measure the 
+distance between observations and cluster centres. 
+This decision means that the data that this algorithm can use 
+must be ordered and the increments evenly spaced. 
+Quantitative data (e.g., heights, weights, speed, etc) satisfies these criteria, 
+however, categorical data (e.g., a variable for hair colour, 
+that can hold the value blonde, brown, red, black, etc)
+does not. 
 
 ### Random restarts
 
