fixed racing-code that exceeds 80 characters

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -631,11 +631,16 @@ of the cluster assignments for each point:
 
 ```{r 10-plot-clusters-2, fig.height = 4, fig.width = 4.35}
 cluster_plot <- ggplot(clustered_data,
-  aes(x = flipper_length_mm, y = bill_length_mm, colour = .cluster),
+  aes(x = flipper_length_mm, 
+      y = bill_length_mm, 
+      colour = .cluster), 
   size = 2) +
   geom_point() +
-  labs(x = "Flipper Length (standardized)", y = "Bill Length (standardized)", colour = "Cluster") + 
+  labs(x = "Flipper Length (standardized)", 
+       y = "Bill Length (standardized)", 
+       colour = "Cluster") + 
   scale_color_manual(values = c("dodgerblue3","darkorange3",  "goldenrod1"))
+
 cluster_plot
 ```
 
