worked on wording about needed data type

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -398,12 +398,12 @@ What kind of data is suitable for K-means clustering?
 In the simplest version of K-means clustering that we have presented here,
 the straight-line / Euclidean distance is used to measure the 
 distance between observations and cluster centres. 
-This decision means that the data that this algorithm can use 
-must be ordered and the increments evenly spaced. 
-Quantitative data (e.g., heights, weights, speed, etc) satisfies these criteria, 
-however, categorical data (e.g., a variable for hair colour, 
-that can hold the value blonde, brown, red, black, etc)
-does not. 
+This means that only quantitative data should be used with this algorithm.
+There are variants on the K-means algorithm, 
+as well as other clustering algorithms entirely, 
+that use other distance metrics 
+to allow for non-quantitative data to be clustered, 
+however they are beyond the scope of this book.
 
 ### Random restarts
 
